--- a/Free kicks/Assembly-CSharp.csproj
+++ b/Free kicks/Assembly-CSharp.csproj
@@ -63,12 +63,18 @@
     <Compile Include="Assets\EasyGrassSubstance\Example Scene\ObjectRotation.cs" />
     <Compile Include="Assets\Scripts\ArenaController.cs" />
     <Compile Include="Assets\Scripts\BallController.cs" />
+    <Compile Include="Assets\Scripts\BarrierController.cs" />
+    <Compile Include="Assets\Scripts\EditTestController.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\GoalDetector1Controller.cs" />
     <Compile Include="Assets\Scripts\GoalDetector2Controller.cs" />
+    <Compile Include="Assets\Scripts\MenuButton.cs" />
+    <Compile Include="Assets\Scripts\NewTestController.cs" />
     <Compile Include="Assets\Scripts\OptionController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ScoreText.cs" />
+    <Compile Include="Assets\Scripts\SingleplayerController.cs" />
+    <Compile Include="Assets\Scripts\StrikerController.cs" />
     <Compile Include="Assets\Scripts\TestController.cs" />
     <None Include="Assets\player\Info.txt" />
     <None Include="Assets\EasyGrassSubstance\Documentation.txt" />
