--- a/Free kicks/Assembly-CSharp.csproj
+++ b/Free kicks/Assembly-CSharp.csproj
@@ -66,14 +66,15 @@
     <Compile Include="Assets\Scripts\BarrierController.cs" />
     <Compile Include="Assets\Scripts\EditTestController.cs" />
     <Compile Include="Assets\Scripts\Fraction.cs" />
+    <Compile Include="Assets\Scripts\FreeKicksMenuController.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\GoalDetector1Controller.cs" />
     <Compile Include="Assets\Scripts\GoalDetector2Controller.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\MenuButton.cs" />
-    <Compile Include="Assets\Scripts\MenuController.cs" />
     <Compile Include="Assets\Scripts\NewTestController.cs" />
     <Compile Include="Assets\Scripts\OptionController.cs" />
+    <Compile Include="Assets\Scripts\PictureThisMenuController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ScoreText.cs" />
     <Compile Include="Assets\Scripts\SingleplayerController.cs" />
