--- a/Free kicks/Assembly-CSharp.csproj
+++ b/Free kicks/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\MenuButton.cs" />
     <Compile Include="Assets\Scripts\NewTestController.cs" />
+    <Compile Include="Assets\Scripts\NewWordList.cs" />
     <Compile Include="Assets\Scripts\OptionController.cs" />
     <Compile Include="Assets\Scripts\PictureThisMenuController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
