--- a/Free kicks/Assembly-CSharp.csproj
+++ b/Free kicks/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\BallController.cs" />
     <Compile Include="Assets\Scripts\BarrierController.cs" />
     <Compile Include="Assets\Scripts\EditTestController.cs" />
+    <Compile Include="Assets\Scripts\EditWordList.cs" />
     <Compile Include="Assets\Scripts\Fraction.cs" />
     <Compile Include="Assets\Scripts\FreeKicksMenuController.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
