display words to draw, check if words is correct and change turns

--- a/Free kicks/Assembly-CSharp.csproj
+++ b/Free kicks/Assembly-CSharp.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Assets\Scripts\TestButton.cs" />
     <Compile Include="Assets\Scripts\TestController.cs" />
     <Compile Include="Assets\Scripts\TestScrollView.cs" />
+    <Compile Include="Assets\Scripts\WordListPicker.cs" />
     <None Include="Assets\player\Info.txt" />
     <None Include="Assets\ColorPicker\license.txt" />
     <None Include="Assets\EasyGrassSubstance\Documentation.txt" />
